test/functions/bradc/paramThis/funParamThis2.good
funParamThis2.chpl:1: syntax error: 'this' intents can only be applied to methods, but 'foo' is not a method
